# Trustra-ng

./: ARCHITECTURE.md
app/: escrow.py  verifier.py  webhook.py
backend/: Dockerfile.py  alembic.ini  build.sh  deploy.sh  init_database.py  init_db.py  one_click_deploy.sh  pyproject.toml  render.yaml  requirements.txt  run_migration.py  run_migrations.py
backend /: escrow.py
backend/alembic/: env.py
backend/app/: admin.py  config.py  database.py  main.py  paystack.py  terms.py  webhook.py  whatsapp.py
backend/app/ai/: risk_engine.py  trust_engine.py
backend/app/intelligence/: _init_.py  fraud.py  predictor.py  risk_engine.py  trust_score.py
backend/app/legal/: privacy.py  terms.py
backend/app/middleware/: risk_guard.py
backend/app/models/: _init_.py  dispute.py  escrow.py  revenue.py  user.py
backend/app/routes/: _init_.py  admin.py  auth.py  escrow.py  user.py  users.py  webhook.py
backend/app/services/: auth.py  constraints.py  escrow.py  escrow_engine.py  escrow_logic.py  fraud_engine.py  monetization.py  trust.py  trust_score.py  verification.py  whatsapp.py
backend/app/services/middleware/: billing_guard.py
backend/schema/: 002_hardnening.sql  002_indexes.sql  004_audit.sql  006_fraud_signals.sql
backend/scripts/: db.sh
frontend/components/: TrustBadge.js  WhatsAppButton.js
frontend/lib/: api.js  auth,js
frontend/pages/: admin.js  dashborad.js  index.js  login.js  register.js  terms.js
frontend/pages/admin/: index.js
